Fix header flex alignment

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
+header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 header img {
     height: 60px;
-    text-align: center;
     width: 100px;
 }
